# czt

./: README.md  main.ipynb  main.py  pyproject.toml  xgb_data_loader.py  xgb_embed_data_loader.py
notebooks/: 1.1.prepare_data.ipynb  2.1.1.feature_enrichment.ipynb  2.1.2.pre_process.ipynb  2.2.1.graph_construct.ipynb  2.2.2.gnn_train_encode.ipynb
src/: enrich.py  gnn_train_encode.py  graph_construct.py  pre_process.py
utils/: merge_feat.py  prepare_data.py
