[project]
name = "czt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kagglehub>=0.3.12",
    "matplotlib>=3.10.5",
    "nvflare>=2.6.1",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "shap>=0.48.0",
    "tensorboard>=2.20.0",
    "torch-geometric>=2.6.1",
    "torch==2.7.0",
    "xgboost>=3.0.3",
    "pyg-lib",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
]

[tool.uv.sources]
pyg-lib = [
  { index = "pyg" },
]


[[tool.uv.index]]
name = "pyg"
url = "https://data.pyg.org/whl/torch-2.7.0+cpu.html"
ignore-error-codes = [403]
format = "flat"
